# robohand-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clangd-trace.json  partitions.csv
main/: CMakeLists.txt  Kconfig.projbuild  config.hpp  idf_component.yml  main.cpp
main/Arduino-fork/cores/esp32/: IPAddress.h  chip-debug-report.cpp
main/include/: MUX74HC4067.hpp  config.hpp  icecream.hpp  interanl_api.hpp  internal_api.hpp  middleware.hpp  mqtt.hpp  netif.hpp  nvs.hpp  small_mutex.hpp  utils.hpp  wifi.hpp
main/src/: MUX74HC4067.cpp  internal_api.cpp  mqtt.cpp  netif.cpp  nvs.cpp  utils.cpp  wifi.cpp
